--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=OrtuGuru
-APP_LOGO=
+# APP_LOGO=
 APP_ENV=local
 APP_KEY=base64:hQMeM4/6F2x3u6lp4YuYYU+R2GskosibNSQ8eXz4eiM=
 APP_DEBUG=true
@@ -65,3 +65,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+DEFAULT_PASSWORD=smkn1bekasipastibisa
