--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.47",
+        "sass-embedded": "^1.86.0",
         "tailwindcss": "^3.4.13",
-        "vite": "^6.0.11"
+        "vite": "^6.2.1"
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
+        "datatables.net": "^2.2.2",
+        "datatables.net-bs5": "^2.2.2",
+        "datatables.net-buttons": "^3.2.2",
+        "datatables.net-buttons-dt": "^3.2.2",
+        "datatables.net-dt": "^2.2.2",
         "jquery": "^3.7.1",
+        "select2": "^4.1.0-rc.0",
         "sweetalert2": "^11.17.2"
     }
 }
